syntax = "proto3";

package user;

service UserService {
    rpc findOne (userById) returns (User) {}
    rpc findOneByEmail(UserByEmail) returns (User) {}
}

message userById {
    string id = 1;
}

message UserByEmail {
    string email = 1;
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}